--- a/06/EXOS_3_4.ipynb
+++ b/06/EXOS_3_4.ipynb
@@ -218,7 +218,7 @@
     "\n",
     "Par exemple, la file 10-20-30  une fois inversée, donnera 30-20-10\n",
     "\n",
-    "Remarque : on pourra utiliser certaines fonctions listées dans l'interface de l'exercice 1."
+    "Remarque : on pourra utiliser certaines fonctions listées dans l'exercice précédent."
    ]
   },
   {
